tests/semantic/pass/struct_pointer_in_struct.c
struct S {struct S *sptr;};
int main(void) {
  return 0;
}
