tests/semantic/fail/compare_pointers1.c
struct S {int i;};
struct T {int i;};

int main(void) {
  struct S* sptr;
  struct T* tptr;
  if (sptr == tptr) {
    return 0;
  }
  return 0;
}
